work/13/networkPolicy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    env: prd
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    env: stg
