work/13/networkPolicy/nginx-pod-ns.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-prd-app1
  namespace: production
  labels:
    app: app1
spec:
  containers:
    - name: nginx-prd-app1
      image: nginx:latest
      ports:
      - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-prd-app2
  namespace: production
  labels:
    app: app2
spec:
  containers:
    - name: nginx-prd-app2
      image: nginx:latest
      ports:
      - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-stg-app1
  namespace: staging
  labels:
    app: app1
spec:
  containers:
    - name: nginx-stg-app1
      image: nginx:latest
      ports:
      - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-stg-app2
  namespace: staging
  labels:
    app: app2
spec:
  containers:
    - name: nginx-stg-app2
      image: nginx:latest
      ports:
      - containerPort: 80
