work/13/networkPolicy/deny-all-prd.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-prd
  namespace: production
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
